--- a/src/Compnents/components/style.css
+++ b/src/Compnents/components/style.css
@@ -8,7 +8,7 @@ body {
   padding: 40px 0;
   color: white;
 }
-.container {
+.cus-container {
   margin: 0 auto;
   width: 750px;
   background: #444753;
@@ -189,7 +189,7 @@ img.fix{
 .float-right {
   float: right;
 }
-.clearfix:after {
+.cus-clearfix:after {
   visibility: hidden;
   display: block;
   font-size: 0;
