fixed send empty mess

--- a/src/Compnents/components/style.css
+++ b/src/Compnents/components/style.css
@@ -221,3 +221,10 @@ li{
   text-align: center;
   line-height: 15;
 }
+.img-custom{
+  width: 50%;
+  height: 50%;
+}
+.img-custom .right{
+  float: right;
+}
